[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true

[tool.pylint.format]
indent-string = "\t"
max-line-length = 120
ignore-long-lines = "add_argument"

[tool.pylint."messages control"]
disable = [
	"broad-exception-caught",
	"missing-class-docstring",
	"missing-function-docstring",
	"missing-module-docstring",
	"too-few-public-methods",
	"too-many-ancestors",
	"too-many-arguments",
	"too-many-branches",
	"too-many-instance-attributes",
	"too-many-locals",
	"too-many-positional-arguments",
	"too-many-public-methods",
	"too-many-statements",
]

[tool.pytest.ini_options]
# Recommended in https://textual.textualize.io/guide/testing/#testing-frameworks-for-textual
asyncio_mode = "auto"
# Future versions of pytest-asyncio will default the loop scope for asynchronous fixtures to function scope.
asyncio_default_fixture_loop_scope = "function"
addopts = ["-n", "auto", "--forked"]
testpaths = ["tests"]
filterwarnings = [
	"ignore:.*may lead to deadlocks in the child.*:DeprecationWarning"
]
